--- a/styles.css
+++ b/styles.css
@@ -25,12 +25,12 @@ html {
     width: 50%;
 }
 
-#chorddiag {
+/* #chart {
     display: block;
     margin: auto;
     width: 50%;
     scale: 1.25;
-}
+} */
 
 
 body {
